[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sre-incident-env"
version = "0.1.0"
description = "SRE Incident Resolution Environment for OpenEnv"
dependencies = [
    "openenv",
    "pydantic"
]
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sre-incident-env"
version = "0.1.0"
description = "SRE Incident Resolution Environment for OpenEnv"
dependencies = [
    "openenv",
    "pydantic"
]

[project.scripts]
server = "server.app:app"
